--- a/tourism_cross-platform/package.json
+++ b/tourism_cross-platform/package.json
@@ -17,7 +17,8 @@
     "vue-i18n": "^8.0.0"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.0"
+    "@quasar/app": "^1.0.0",
+    "quasar-app-extension-ide-helper": "^1.0.0-alpha.3"
   },
   "engines": {
     "node": ">= 10.18.1",
